--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,21 @@ services:
       - "8000:8000" # из докера на наш комп
     volumes:
       - ./service:/service # чтобы при измении python файла не приходилось ребилдить
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
     command: > # sh -c - команда линукс; 0.0.0.0-все ip на компе в порт 8000
-      sh -c "python manage.py runserver 0.0.0.0:8000" 
+      sh -c "python manage.py runserver 0.0.0.0:8000"
+    depends_on:
+    - database 
+
+  database:
+    image: postgres:14.6-alpine
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+
