--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,21 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  
+  redis:
+    image: redis:7.0.5-alpine
+    hostname: redis # имя в Docker
+
+  worker:
+    build:
+        context: .
+    hostname: worker # имя в Docker
+    entrypoint: celery # базовая команда через которую будем вызывать другие команды
+    command: -A celery_app.app worker --loglevel=info
+    volumes:
+      - ./service:/service
+    links:
+      - redis
+    depends_on:
+      - redis
 
