--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,16 @@ services:
     command: -A celery_app.app worker --loglevel=info
     volumes:
       - ./service:/service
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
     links:
       - redis
     depends_on:
       - redis
+      - database
 
 
   flower: # Оболочка для просмотра где какие таски запущены, что отработало и т.д.
