--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,26 @@ services:
       - database
 
 
+  worker2:
+    build:
+        context: .
+    hostname: worker2
+    entrypoint: celery # базовая команда через которую будем вызывать другие команды
+    command: -A celery_app.app worker --loglevel=info
+    volumes:
+      - ./service:/service
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+    links:
+      - redis
+    depends_on:
+      - redis
+      - database
+
+
   flower: # Оболочка для просмотра где какие таски запущены, что отработало и т.д.
     build:
         context: .
